--- a/ci/zinc/drone.yml
+++ b/ci/zinc/drone.yml
@@ -1,23 +1,60 @@
-# ---
-# kind: pipeline
-# type: docker
-# name: x86_64-linux
-# workspace:
-#   path: /workspace
-# 
-# steps:
-# - name: build
-#   image: ci/debian-amd64:11.1-1
-#   commands:
-#   - echo "pretend to do something"
-#   - sleep 5
-#   - pwd
-#   - uname -a
+kind: pipeline
+type: docker
+name: x86_64-linux
+workspace:
+  path: /workspace
 
-#---
+steps:
+- name: build
+  image: ci/debian-amd64:11.1-1
+  commands:
+  - echo "pretend to do something"
+  - sleep 5
+  - pwd
+  - uname -a
+
+---
 kind: pipeline
 type: vm
 name: x86_64-freebsd
+image: freebsd-amd64:13.0-0
+workspace:
+  path: /workspace
+
+steps:
+- name: build
+  commands:
+  - echo "build"
+  - sleep 60
+
+steps:
+- name: build-2
+  commands:
+  - echo "build"
+  - sleep 60
+---
+kind: pipeline
+type: vm
+name: x86_64-freebsd-2
+image: freebsd-amd64:13.0-0
+workspace:
+  path: /workspace
+
+steps:
+- name: build
+  commands:
+  - echo "build"
+  - sleep 60
+
+steps:
+- name: build-2
+  commands:
+  - echo "build"
+  - sleep 60
+---
+kind: pipeline
+type: vm
+name: x86_64-freebsd-3
 image: freebsd-amd64:13.0-0
 workspace:
   path: /workspace
