--- a/ci/zinc/drone.yml
+++ b/ci/zinc/drone.yml
@@ -9,20 +9,20 @@ steps:
   image: ci/debian-amd64:11.1-1
   commands:
   - echo "pretend to do something"
-  - sleep 5
+  - sleep 120
   - pwd
   - uname -a
 
----
-kind: pipeline
-type: vm
-name: x86_64-freebsd
-image: freebsd-amd64:13.0-1
-workspace:
-  path: /workspace
-
-steps:
-- name: build
-  commands:
-  - echo "build"
-  - sleep 60
+# ---
+# kind: pipeline
+# type: vm
+# name: x86_64-freebsd
+# image: freebsd-amd64:13.0-1
+# workspace:
+#   path: /workspace
+# 
+# steps:
+# - name: build
+#   commands:
+#   - echo "build"
+#   - sleep 60
