--- a/ci/zinc/drone.yml
+++ b/ci/zinc/drone.yml
@@ -1,28 +1,28 @@
+#   kind: pipeline
+#   type: docker
+#   name: x86_64-linux
+#   workspace:
+#     path: /workspace
+#   
+#   steps:
+#   - name: build
+#     image: ci/debian-amd64:11.1-1
+#     commands:
+#     - echo "pretend to do something"
+#     - sleep 120
+#     - pwd
+#     - uname -a
+#   
+#   ---
 kind: pipeline
-type: docker
-name: x86_64-linux
+type: vm
+name: x86_64-freebsd
+image: freebsd-amd64:13.0-1
 workspace:
   path: /workspace
 
 steps:
 - name: build
-  image: ci/debian-amd64:11.1-1
   commands:
-  - echo "pretend to do something"
-  - sleep 120
-  - pwd
-  - uname -a
-
-# ---
-# kind: pipeline
-# type: vm
-# name: x86_64-freebsd
-# image: freebsd-amd64:13.0-1
-# workspace:
-#   path: /workspace
-# 
-# steps:
-# - name: build
-#   commands:
-#   - echo "build"
-#   - sleep 60
+  - echo "build"
+  - sleep 180
