--- a/ci/zinc/drone.yml
+++ b/ci/zinc/drone.yml
@@ -15,10 +15,27 @@
 kind: pipeline
 type: vm
 name: x86_64-freebsd
-image: ci/freebsd-amd64:13.0-1
+image: ci/freebsd-amd64:13.0-0
 
 steps:
 - name: build
   commands:
-  - echo "build"
+  - true
+steps:
+- name: fail
+  commands:
+  - false
+---
+kind: pipeline
+type: vm
+name: x86_64-openbsd
+image: ci/openbsd-amd64:7.0-0
+
+steps:
+- name: build
+  commands:
+  - true
+steps:
+- name: fail
+  commands:
   - false
