--- a/ci/zinc/drone.yml
+++ b/ci/zinc/drone.yml
@@ -24,16 +24,16 @@ steps:
 - name: fail
   commands:
   - false
-#---
-#kind: pipeline
-#type: vm
-#name: x86_64-freebsd-2
-#image: ci/freebsd-amd64:13.0-0
-#
-#steps:
-#- name: build
-#  commands:
-#  - true
-#- name: fail
-#  commands:
-#  - false
+---
+kind: pipeline
+type: vm
+name: x86_64-freebsd-2
+image: ci/freebsd-amd64:13.0-0
+
+steps:
+- name: build
+  commands:
+  - true
+- name: fail
+  commands:
+  - false
