--- a/ci/zinc/drone.yml
+++ b/ci/zinc/drone.yml
@@ -20,20 +20,22 @@ image: ci/freebsd-amd64:13.0-0
 steps:
 - name: build
   commands:
+  - sleep 10
   - true
 - name: fail
   commands:
+  - sleep 5
   - false
----
-kind: pipeline
-type: vm
-name: x86_64-freebsd-2
-image: ci/freebsd-amd64:13.0-0
-
-steps:
-- name: build
-  commands:
-  - true
-- name: fail
-  commands:
-  - false
+# ---
+# kind: pipeline
+# type: vm
+# name: x86_64-freebsd-2
+# image: ci/freebsd-amd64:13.0-0
+# 
+# steps:
+# - name: build
+#   commands:
+#   - true
+# - name: fail
+#   commands:
+#   - false
