--- a/ci/zinc/drone.yml
+++ b/ci/zinc/drone.yml
@@ -1,35 +1,40 @@
-#   kind: pipeline
-#   type: docker
-#   name: x86_64-linux
-#   
-#   steps:
-#   - name: build
-#     image: ci/debian-amd64:11.1-1
-#     commands:
-#     - echo "pretend to do something"
-#     - sleep 120
-#     - pwd
-#     - uname -a
-#   
-#   ---
 kind: pipeline
-type: vm
-name: x86_64-freebsd-1
-image: ci/freebsd-amd64:13.0-0
+type: docker
+name: x86_64-linux
 
 steps:
 - name: build
+  image: ci/debian-amd64:11.1-1
   commands:
-  - sleep 30
-  - true
+  - sleep 20
 - name: two
+  image: ci/debian-amd64:11.1-1
   commands:
   - sleep 15
-  - true
 - name: three
+  image: ci/debian-amd64:11.1-1
   commands:
-  - sleep 45
-  - true
+  - sleep 10
+
+# ---
+# kind: pipeline
+# type: vm
+# name: x86_64-freebsd-1
+# image: ci/freebsd-amd64:13.0-0
+# 
+# steps:
+# - name: build
+#   commands:
+#   - sleep 30
+#   - true
+# - name: two
+#   commands:
+#   - sleep 15
+#   - true
+# - name: three
+#   commands:
+#   - sleep 45
+#   - true
 
 # ---
 # kind: pipeline
