--- a/ci/zinc/drone.yml
+++ b/ci/zinc/drone.yml
@@ -1,46 +1,52 @@
-kind: pipeline
-type: docker
-name: x86_64-linux
-
-steps:
-- name: build
-  image: ci/debian-amd64:11.1-1
-  commands:
-  - sleep 20
-
-- name: two
-  depends_on:
-  - build
-  image: ci/debian-amd64:11.1-1
-  commands:
-  - sleep 15
-
-- name: three
-  depends_on:
-  - build
-  image: ci/debian-amd64:11.1-1
-  commands:
-  - sleep 10
-
-# ---
 # kind: pipeline
-# type: vm
-# name: x86_64-freebsd-1
-# image: ci/freebsd-amd64:13.0-0
+# type: docker
+# name: x86_64-linux
 # 
 # steps:
 # - name: build
+#   image: ci/debian-amd64:11.1-1
 #   commands:
-#   - sleep 30
-#   - true
+#   - sleep 20
+# 
 # - name: two
+#   depends_on:
+#   - build
+#   image: ci/debian-amd64:11.1-1
 #   commands:
 #   - sleep 15
-#   - true
+# 
 # - name: three
+#   depends_on:
+#   - build
+#   image: ci/debian-amd64:11.1-1
 #   commands:
-#   - sleep 45
-#   - true
+#   - sleep 10
+
+---
+kind: pipeline
+type: vm
+name: x86_64-freebsd-1
+image: ci/freebsd-amd64:13.0-0
+
+steps:
+- name: build
+  depends_on:
+  - clone
+  commands:
+  - sleep 30
+  - true
+- name: two
+  depends_on:
+  - clone
+  commands:
+  - sleep 15
+  - true
+- name: three
+  depends_on:
+  - clone
+  commands:
+  - sleep 45
+  - true
 
 # ---
 # kind: pipeline
