--- a/ci/zinc/drone.yml
+++ b/ci/zinc/drone.yml
@@ -1,27 +1,35 @@
-# kind: pipeline
-# type: docker
-# name: x86_64-linux
-# 
-# steps:
-# - name: build
-#   image: ci/debian-amd64:11.1-1
-#   commands:
-#   - sleep 20
-# 
-# - name: two
-#   depends_on:
-#   - build
-#   image: ci/debian-amd64:11.1-1
-#   commands:
-#   - sleep 15
-# 
-# - name: three
-#   depends_on:
-#   - build
-#   image: ci/debian-amd64:11.1-1
-#   commands:
-#   - sleep 10
-#---
+kind: pipeline
+type: docker
+name: x86_64-linux
+
+steps:
+- name: build
+  image: ci/debian-amd64:11.1-1
+  commands:
+  - true
+
+- name: two
+  depends_on:
+  - build
+  image: ci/debian-amd64:11.1-1
+  commands:
+  - sleep 20
+
+- name: three
+  depends_on:
+  - build
+  image: ci/debian-amd64:11.1-1
+  commands:
+  - sleep 20
+
+- name: four
+  depends_on:
+  - build
+  image: ci/debian-amd64:11.1-1
+  commands:
+  - sleep 20
+
+---
 kind: pipeline
 type: vm
 name: x86_64-freebsd-1
@@ -31,28 +39,24 @@ steps:
 - name: build
   commands:
   - sleep 5
-  - true
 
 - name: two
   depends_on:
   - build
   commands:
   - sleep 15
-  - true
 
 - name: three
   depends_on:
   - build
   commands:
   - sleep 15
-  - true
 
 - name: four
   depends_on:
   - build
   commands:
   - sleep 15
-  - true
 
 # ---
 # kind: pipeline
