--- a/ci/zinc/drone.yml
+++ b/ci/zinc/drone.yml
@@ -30,10 +30,38 @@
 #  - sleep 20
 #
 #---
+#kind: pipeline
+#type: vm
+#name: x86_64-freebsd
+#image: ci/freebsd-amd64:13.0-0
+#
+#steps:
+#- name: build
+#  commands:
+#  - sleep 5
+#
+#- name: two
+#  depends_on:
+#  - build
+#  commands:
+#  - sleep 15
+#
+#- name: three
+#  depends_on:
+#  - two
+#  - four
+#  commands:
+#  - sleep 15
+#
+#- name: four
+#  depends_on:
+#  - build
+#  commands:
+#  - sleep 15
+#---
 kind: pipeline
-type: vm
-name: x86_64-freebsd-1
-image: ci/freebsd-amd64:13.0-0
+type: exec
+name: x86_64-freebsd
 
 steps:
 - name: build
