--- a/ci/zinc/drone.yml
+++ b/ci/zinc/drone.yml
@@ -60,8 +60,8 @@
 #  - sleep 15
 #---
 kind: pipeline
-type: exec
-name: x86_64-freebsd
+type: qemu
+name: build-freebsd-x86_64
 
 steps:
 - name: build
@@ -72,20 +72,20 @@ steps:
   depends_on:
   - build
   commands:
-  - sleep 15
+  - sleep 5
 
 - name: three
   depends_on:
   - two
   - four
   commands:
-  - sleep 15
+  - sleep 5
 
 - name: four
   depends_on:
   - build
   commands:
-  - sleep 15
+  - sleep 5
 
 # ---
 # kind: pipeline
